EDU-415 Start redefining color variables

--- a/src/components/control-panel.less
+++ b/src/components/control-panel.less
@@ -13,7 +13,7 @@
   bottom: 0;
   height: @control-panel-height;
   width: @control-panel-height;
-  background-color: @edu-primary-color;
+  background-color: @edu-primary-color-light;
   transition: width 500ms ease;
   z-index: @edu-z-index-overlay-layer;
 
