--- a/src/components/error-page.less
+++ b/src/components/error-page.less
@@ -69,7 +69,7 @@
   font-family: 'Dancing Script';
   font-size: 72px;
   text-align: center;
-  color: @edu-primary-color;
+  color: @edu-primary-color-light;
   margin: 32px 0;
 }
 
