--- a/src/components/markdown.less
+++ b/src/components/markdown.less
@@ -1,10 +1,10 @@
-@markdown-blockquote-color: fade(@edu-primary-color, 50%);
+@markdown-blockquote-color: fade(@edu-primary-color-light, 50%);
 @markdown-blockquote-background-color: @grey-1;
 @markdown-blockquote-shadow-color: @grey-6;
-@markdown-blockquote-quotations-color: fade(@edu-primary-color, 20%);
-@markdown-table-border-color: fade(@edu-primary-color, 50%);
+@markdown-blockquote-quotations-color: fade(@edu-primary-color-light, 20%);
+@markdown-table-border-color: fade(@edu-primary-color-light, 50%);
 @markdown-table-cell-text-color: @edu-text-color;
-@markdown-table-header-background-color: fade(@edu-primary-color, 20%);
+@markdown-table-header-background-color: fade(@edu-primary-color-light, 20%);
 
 .Markdown {
   blockquote {
