--- a/src/components/table.less
+++ b/src/components/table.less
@@ -17,7 +17,7 @@
 
 .m-pagination-item-active() {
   font-weight: normal;
-  background-color: @edu-background-color-base;
+  background-color: @edu-background-color;
 }
 
 .Table {
@@ -28,7 +28,7 @@
       border-radius: 0;
 
       thead tr th {
-        background-color: @edu-background-color-base;
+        background-color: @edu-background-color;
 
         &:first-child,
         &:last-child {
@@ -37,7 +37,7 @@
       }
 
       tbody tr td {
-        border-color: @edu-background-color-base;
+        border-color: @edu-background-color;
       }
     }
   }
