--- a/src/plugins/quick-tester/quick-tester.less
+++ b/src/plugins/quick-tester/quick-tester.less
@@ -1,10 +1,10 @@
 @quick-tester-panel-padding: 6px 12px;
-@quick-tester-border-color: @edu-primary-color;
-@quick-tester-color: @edu-primary-color;
+@quick-tester-border-color: @edu-primary-color-light;
+@quick-tester-color: @edu-primary-color-light;
 @quick-tester-background-color: fade(@edu-selection-background-color, 20%);
 @quick-tester-background-hover-color: @edu-selection-background-color;
 @quick-tester-header-color: @edu-text-color-inverse;
-@quick-tester-header-background-color: @edu-primary-color;
+@quick-tester-header-background-color: @edu-primary-color-light;
 @quick-tester-progress-background-color: @edu-success-color;
 
 .QuickTester {}
