--- a/src/styles/panel.less
+++ b/src/styles/panel.less
@@ -14,7 +14,7 @@
   transition: border-color 0.5s ease-in-out;
 
   &.is-highlighted {
-    border-color: @edu-primary-color;
+    border-color: @edu-primary-color-light;
   }
 
   &.is-invalid {
