--- a/src/styles/tag.less
+++ b/src/styles/tag.less
@@ -17,7 +17,7 @@
 
   &.Tag--selected {
     color: @edu-white;
-    background-color: @edu-primary-color;
+    background-color: @edu-primary-color-light;
 
     & > .ant-tag-close-icon {
       color: @edu-white;
