--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -26,8 +26,8 @@
   padding: 10px;
 
   &.is-highlighted {
-    border: 1px solid fade(@edu-primary-color, 10%);
-    background-color: fade(@edu-primary-color, 5%);
+    border: 1px solid fade(@edu-primary-color-light, 10%);
+    background-color: fade(@edu-primary-color-light, 5%);
     border-left: none;
     border-right: none;
   }
