--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -33,44 +33,61 @@
 @edu-control-height-sm: 24px;
 
 // Colors
-@edu-primary-color: @blue-6;
+@edu-primary-color-light: #6D8BB1;
+@edu-primary-color-dark: #4F608E; // or TBD for some headings
 @edu-secondary-color-light: #F5E3D6;
 @edu-secondary-color-dark: #EAA58D;
-@edu-link-color: inherit;
-@edu-link-decoration: underline;
-@edu-link-hover-color: inherit;
-@edu-link-active-color: inherit;
-@edu-info-color: @edu-primary-color;
+
+@edu-text-color: #626262;
+@edu-text-color-fineprint: #9A9A9A;
+@edu-disabled-color: @grey-2;
+@edu-background-color: #F0F0F0;
+@edu-background-color-light: #F0F0F0;
+@edu-content-title-color: #000000;
+
+// antd mappings
+@edu-heading-color: @edu-primary-color-dark;
+@edu-modal-heading-color: @edu-text-color;
+@edu-text-color-secondary: @edu-text-color-fineprint;
+@edu-background-color-base: @edu-background-color;
+@edu-label-color: @edu-text-color;
+@edu-table-header-color: @edu-text-color;
+@edu-table-selected-row-bg: @edu-text-color;
+@edu-table-footer-color: @edu-text-color;
+@edu-card-head-color: @edu-text-color;
+@edu-alert-message-color: @edu-text-color;
+
+@edu-selection-background-color: fade(@edu-primary-color-light, 10%);
+@edu-progress-default-color: fade(@edu-primary-color-light, 60%);
+
 @edu-apply-color: @green-4;
 @edu-success-color: @green-6;
-@edu-processing-color: @edu-primary-color;
 @edu-discard-color: @red-4;
 @edu-error-color: @red-5;
 @edu-danger-color: @red-8;
 @edu-highlight-color: @red-5;
 @edu-warning-color: @gold-6;
-@edu-normal-color: @grey-5;
+
+@edu-normal-color: @grey-5; //  what is this?
+@edu-table-selected-row-background-color: tint(@edu-primary-color-light, 95%);
+
 @edu-white: @grey-1;
 @edu-black: @grey-10;
-@edu-text-color: fade(@edu-black, 85%);
-@edu-text-color-secondary: fade(@edu-black, 45%);
 @edu-text-color-inverse: @edu-white;
-@edu-disabled-color: fade(@edu-black, 25%);
-@edu-selection-background-color: fade(@edu-primary-color, 10%);
-@edu-progress-default-color: fade(@edu-primary-color, 60%);
-@edu-background-color-base: @grey-4;
-@edu-background-color-light: @grey-3;
+@edu-link-color: inherit;
+@edu-link-decoration: underline;
+@edu-link-hover-color: inherit;
+@edu-link-active-color: inherit;
+@edu-info-color: @edu-primary-color-light;
+@edu-processing-color: @edu-primary-color-light;
 
-// Slider
+// Colors - slider
 @edu-slider-rail-background-color: @grey-4;
 @edu-slider-rail-background-color-hover: @grey-5;
-@edu-slider-track-background-color: tint(@edu-primary-color, 40%);
-@edu-slider-track-background-color-hover: tint(@edu-primary-color, 20%);
+@edu-slider-track-background-color: tint(@edu-primary-color-light, 40%);
+@edu-slider-track-background-color-hover: tint(@edu-primary-color-light, 20%);
 @edu-slider-dot-border-color: @grey-5;
-@edu-slider-dot-border-color-active: tint(@edu-primary-color, 20%);
-
-// Table
-@edu-table-selected-row-background-color: tint(@edu-primary-color, 95%);
+@edu-slider-dot-border-color-active: tint(@edu-primary-color-light, 20%);
 
 // Border radii
 @edu-border-radius-base: 8px;
