EDU-417 Rework custom alert
* Do not disclose underlying antd component
* Adjust paddings and margins
* Reduce to type "info" only

--- a/src/components/alert.less
+++ b/src/components/alert.less
@@ -1,6 +1,12 @@
 .Alert {
   background-color: @edu-secondary-color-light;
+  padding: 20px 16px;
+  border-radius: 0;
   border: none;
+
+  & + & {
+    margin-top: 12px;
+  }
 }
 
 .Alert-icon {
