EDU-415 Define semantic grey colors

--- a/src/components/error-page.less
+++ b/src/components/error-page.less
@@ -15,7 +15,7 @@
   width: 100%;
   z-index: @edu-z-index-sticky-content-layer;
   position: sticky;
-  background-color: @grey-1;
+  background-color: @edu-white;
   margin-bottom: @edu-page-content-padding;
 }
 
