--- a/src/components/markdown-textarea.less
+++ b/src/components/markdown-textarea.less
@@ -11,7 +11,7 @@
 .MarkdownTextarea-preview {
   min-height: 50px;
   height: 100%;
-  border: 1px solid @grey-5;
   padding: 4px 11px;
+  border: 1px solid @edu-border-color-base;
   border-radius: @edu-border-radius-base;
 }
