--- a/src/components/media-control.less
+++ b/src/components/media-control.less
@@ -1,8 +1,8 @@
 @media-control-background-color: lighten(@grey-9, 10%);
-@media-control-button-color: @grey-2;
-@media-control-text-color: @grey-2;
-@media-control-progress-background-color: @grey-10;
-@media-control-progress-foreground-color: @grey-2;
+@media-control-button-color: @edu-background-color-light;
+@media-control-text-color: @edu-text-color;
+@media-control-progress-background-color: @edu-black;
+@media-control-progress-foreground-color: @edu-background-color-light;
 
 .MediaControl {
   @import (less) 'react-soundplayer/styles/cover.css';
