--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -63,6 +63,7 @@
 }
 
 .SearchPage-titleCellTitle {
+  color: @edu-content-title-color;
   font-size: 1.25em;
   font-weight: bold;
 }
@@ -75,5 +76,5 @@
 .SearchPage-titleCellDates {
   margin-top: 0.75em;
   font-size: 0.9em;
-  color: fade(@edu-text-color, 66%);
+  color: @edu-text-color-secondary;
 }
