--- a/src/plugins/iframe/iframe.less
+++ b/src/plugins/iframe/iframe.less
@@ -1,5 +1,3 @@
-@iframe-border-color: @grey-5;
-
 .Iframe {
 
   .Iframe-frame {
@@ -8,7 +6,7 @@
     margin: 0 auto;
 
     &.Iframe-frame--borderVisible {
-      border: 1px solid @iframe-border-color;
+      border: 1px solid @edu-border-color-base;
     }
   }
 }
