--- a/src/styles/antd-style-overrides.less
+++ b/src/styles/antd-style-overrides.less
@@ -1,3 +1,8 @@
 .ant-checkbox-inner, .ant-checkbox-checked::after {
   border-radius: @edu-border-radius-boxy;
 }
+
+.ant-btn[disabled] {
+  background-color: inherit;
+  color: @edu-disabled-color;
+}
