--- a/src/styles/antd-variable-overrides.less
+++ b/src/styles/antd-variable-overrides.less
@@ -142,7 +142,7 @@
 // @outline-fade: 20%;
 
 @background-color-light: @edu-background-color-light;
-@background-color-base: @edu-background-color;
+@background-color-base: @edu-background-color-base;
 
 // // Disabled states
 @disabled-color: @edu-disabled-color;
