--- a/src/styles/tag.less
+++ b/src/styles/tag.less
@@ -6,7 +6,7 @@
   justify-content: center;
   padding: @tag-text-vertical-padding 16px;
   border-radius: 22px;
-  background-color: @grey-3;
+  background-color: @edu-background-color-base;
   font-size: 12px;
   margin: 3px 5px 3px 0;
   border: none;
