--- a/test-app/src/main.less
+++ b/test-app/src/main.less
@@ -9,8 +9,7 @@
 @import url('./bundles/home-page-template.less');
 @import url('./bundles/home-page-illustration.less');
 
-@oma-blue-1: #F2F5F8;
-@oma-blue-2: #4F608E;
+@custom-home-page-illustration-background-color: #F2F5F8;
 
 @edu-success-color: #369911;
 @edu-error-color: #b11200;
