--- a/src/components/credits-footer.less
+++ b/src/components/credits-footer.less
@@ -2,5 +2,5 @@
   display: block;
   margin-top: 20px;
   padding-top: 20px;
-  border-top: 1px @grey-6 solid;
+  border-top: 1px @edu-border-color-base solid;
 }
