--- a/src/components/link-popover.less
+++ b/src/components/link-popover.less
@@ -9,7 +9,7 @@
   display: block;
   margin: 0;
   padding: 6px 0;
-  border-bottom: 1px solid @grey-4;
+  border-bottom: 1px solid @edu-border-color-light;
 
   &:first-child {
     padding-top: 0;
