--- a/src/components/localization/language-icon.less
+++ b/src/components/localization/language-icon.less
@@ -1,5 +1,3 @@
-@language-icon-color: @grey-7;
-
 .LanguageIcon {
   display: flex;
   align-items: center;
@@ -7,7 +5,7 @@
   width: 32px;
   height: 32px;
   font-size: 11px;
-  color: @language-icon-color;
-  border: 1px solid @language-icon-color;
+  color: @edu-text-color-secondary;
+  border: 1px solid @edu-text-color-secondary;
   border-radius: 50%;
 }
