--- a/src/components/metadata-title.less
+++ b/src/components/metadata-title.less
@@ -4,5 +4,5 @@
   padding: 0 0 0.25em 0;
   color: @edu-text-color;
   font-size: @edu-title-size;
-  border-bottom: 1px solid @grey-6;
+  border-bottom: 1px solid @edu-border-color-base;
 }
