--- a/src/plugins/quick-tester/quick-tester.less
+++ b/src/plugins/quick-tester/quick-tester.less
@@ -1,11 +1,4 @@
 @quick-tester-panel-padding: 6px 12px;
-@quick-tester-border-color: @edu-primary-color-light;
-@quick-tester-color: @edu-primary-color-light;
-@quick-tester-background-color: fade(@edu-selection-background-color, 20%);
-@quick-tester-background-hover-color: @edu-selection-background-color;
-@quick-tester-header-color: @edu-text-color-inverse;
-@quick-tester-header-background-color: @edu-primary-color-light;
-@quick-tester-progress-background-color: @edu-success-color;
 
 .QuickTester {}
 
@@ -13,10 +6,10 @@
   .u-max-width-60;
   margin: 0 auto;
   text-align: center;
-  border: 1px solid @quick-tester-border-color;
+  border: 1px solid @edu-background-color-base;
   border-radius: 3px;
   overflow: hidden;
-  color: @quick-tester-color;
+  color: @edu-text-color;
 
   @media @edu-media-phone {
     .u-max-width-100;
@@ -27,11 +20,11 @@
   display: block;
   text-align: center;
   padding: @quick-tester-panel-padding;
-  background-color: @quick-tester-background-color;
+  background-color: @edu-background-color-base;
   transition: all ease 500ms;
 
   &:hover {
-    background-color: @quick-tester-background-hover-color;
+    background-color: @edu-background-color-light;
     transition: all ease 500ms;
   }
 }
@@ -40,8 +33,8 @@
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   padding: @quick-tester-panel-padding;
-  color: @quick-tester-header-color;
-  background-color: @quick-tester-header-background-color;
+  color: @edu-text-color;
+  background-color: @edu-background-color-base;
 }
 
 .QuickTester-title {
@@ -63,7 +56,7 @@
 
 .QuickTester-progress {
   height: 6px;
-  background-color: @quick-tester-progress-background-color;
+  background-color: @edu-success-color;
   transition: all ease 500ms;
 }
 
