--- a/test-app/src/bundles/home-page-template.less
+++ b/test-app/src/bundles/home-page-template.less
@@ -13,7 +13,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: @oma-blue-1;
+  background-color: @custom-home-page-illustration-background-color;
 
   @media @edu-media-phone {
     padding-bottom: 0;
