EDU-415 Add font-family setup deleted by mistake

--- a/test-app/src/main.less
+++ b/test-app/src/main.less
@@ -9,6 +9,7 @@
 @import url('./bundles/home-page-template.less');
 @import url('./bundles/home-page-illustration.less');
 
+@edu-font-family: 'Lato', sans-serif;
 @custom-home-page-illustration-background-color: #F2F5F8;
 
 @edu-success-color: #369911;
