EDU-432 Create tag selector component

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -74,6 +74,7 @@
 @import '../components/delete-button.less';
 @import '../components/alert.less';
 @import '../components/favorite-star.less';
+@import '../components/tag-selector.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
