--- a/src/styles/tag.less
+++ b/src/styles/tag.less
@@ -1,19 +1,17 @@
-@tag-text-vertical-padding: 3px;
+@tag-font-size: 12px;
+@tag-padding: 3px 16px;
+@tag-border-radius: 22px;
 
 .Tag {
   display: flex;
   align-items: baseline;
   justify-content: center;
-  padding: @tag-text-vertical-padding 16px;
-  border-radius: 22px;
+  padding: @tag-padding;
+  border-radius: @tag-border-radius;
   background-color: @edu-background-color-base;
-  font-size: 12px;
+  font-size: @tag-font-size;
   margin: 3px 5px 3px 0;
   border: none;
-
-  &:last-of-type {
-    margin-right: 0;
-  }
 
   &.Tag--selected {
     color: @edu-white;
