--- a/src/components/metadata-title.less
+++ b/src/components/metadata-title.less
@@ -1,8 +1,19 @@
 .MetadataTitle {
-  font-weight: bold;
+  display: flex;
+  align-items: baseline;
   margin: 0 0 1em 0;
   padding: 0 0 0.25em 0;
+  border-bottom: 1px solid @edu-border-color-base;
+}
+
+.MetadataTitle-text {
+  flex: 1 0 0%;
+  font-weight: bold;
+  margin: 0 2.5em 0 0;
   color: @edu-text-color;
   font-size: @edu-title-size;
-  border-bottom: 1px solid @edu-border-color-base;
+}
+
+.MetadataTitle-extra {
+  flex: none;
 }
