--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -75,6 +75,7 @@
 @import '../components/alert.less';
 @import '../components/favorite-star.less';
 @import '../components/tag-selector.less';
+@import '../components/sorting-selector.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
