EDU-432 Update sorting logic on Search page

--- a/src/components/sorting-selector.less
+++ b/src/components/sorting-selector.less
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  padding: 0 @edu-content-padding;
   height: @edu-control-height-base;
 
   &.SortingSelector--small {
