--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -7,12 +7,12 @@
 .SearchPage-controls {
   display: grid;
   column-gap: 15px;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
 
   @media @edu-media-phone {
     row-gap: 15px;
     grid-template-columns: 100%;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
   }
 }
 
