EDU-423 Use secondary color for favorite star

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -73,6 +73,7 @@
 @import '../components/table.less';
 @import '../components/delete-button.less';
 @import '../components/alert.less';
+@import '../components/favorite-star.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
