--- a/src/styles/tag.less
+++ b/src/styles/tag.less
@@ -1,3 +1,4 @@
+@tag-gap: 5px;
 @tag-font-size: 12px;
 @tag-padding: 3px 16px;
 @tag-border-radius: 22px;
@@ -10,8 +11,12 @@
   border-radius: @tag-border-radius;
   background-color: @edu-background-color-base;
   font-size: @tag-font-size;
-  margin: 3px 5px 3px 0;
+  margin: 3px @tag-gap 3px 0;
   border: none;
+
+  &:last-of-type {
+    margin-right: 0;
+  }
 
   &.Tag--selected {
     color: @edu-white;
