EDU-432 Bonus feature: disable text select for tag links, as this happens easily and is distracting

--- a/src/components/sorting-selector.less
+++ b/src/components/sorting-selector.less
@@ -4,6 +4,7 @@
   align-items: center;
   padding: 0 @edu-content-padding;
   height: @edu-control-height-base;
+  user-select: none;
 
   &.SortingSelector--small {
     height: @edu-control-height-sm;
