--- a/src/components/tag-selector.less
+++ b/src/components/tag-selector.less
@@ -13,6 +13,7 @@
   padding: @tag-padding;
   font-size: @tag-font-size;
   text-decoration: underline;
+  user-select: none;
 
   &.is-active {
     color: @edu-white;
