EDU-425 Rename My Space to Dashboard

--- a/src/components/pages/dashboard.less
+++ b/src/components/pages/dashboard.less
@@ -1,6 +1,6 @@
-.MySpacePage {}
+.DashboardPage {}
 
-.MySpacePage-usedStorage {
+.DashboardPage-usedStorage {
   width: 100%;
   display: flex;
   align-items: baseline;
