EDU-427 Styling tweeks to improve UI

--- a/src/components/rooms-tab.less
+++ b/src/components/rooms-tab.less
@@ -1,12 +1,10 @@
-.RoomsTab {
-  padding-left: 30px;
-}
+.RoomsTab {}
 
-.RoomsTab-section {
-  padding-top: 60px;
+.RoomsTab-card {
+  margin-bottom: 60px;
 
-  &:first-of-type {
-    padding-top: 0;
+  &:last-of-type{
+    margin-bottom: 0;
   }
 }
 
