--- a/src/styles/antd-variable-overrides.less
+++ b/src/styles/antd-variable-overrides.less
@@ -735,7 +735,7 @@
 // @tabs-title-font-size: @font-size-base;
 // @tabs-title-font-size-lg: @font-size-lg;
 // @tabs-title-font-size-sm: @font-size-base;
-// @tabs-ink-bar-color: @primary-color;
+@tabs-ink-bar-color: @edu-tabs-ink-bar-color;
 // @tabs-bar-margin: 0 0 @margin-md 0;
 // @tabs-horizontal-gutter: 32px;
 // @tabs-horizontal-margin: 0 0 0 @tabs-horizontal-gutter;
@@ -746,8 +746,8 @@
 // @tabs-vertical-padding: @padding-xs @padding-lg;
 // @tabs-vertical-margin: @margin-md 0 0 0;
 // @tabs-scrolling-size: 32px;
-// @tabs-highlight-color: @primary-color;
-// @tabs-hover-color: @primary-5;
+@tabs-highlight-color: @edu-tabs-highlight-color;
+@tabs-hover-color: @edu-tabs-hover-color;
 // @tabs-active-color: @primary-7;
 // @tabs-card-gutter: 2px;
 // @tabs-card-tab-active-border-top: 2px solid transparent;
