--- a/src/components/pages/lesson.less
+++ b/src/components/pages/lesson.less
@@ -1,7 +1,8 @@
 .LessonPage {}
 
 .LessonPage-breadcrumbs {
-  padding: @edu-content-padding 0;
+  font-size: 12px;
+  padding-bottom: 2 * @edu-content-padding;
 }
 
 .LessonPage-editControlPanelItem {
