--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -4,7 +4,8 @@
 
 .Room-subtitle {
   display: flex;
-  font-size: 13px;
+  font-size: 12px;
+  color: @edu-text-color-secondary;
 }
 
 .Room-subtitleIcon {
