EDU-427 Add news tab to Dashboard page

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -76,6 +76,7 @@
 @import '../components/favorite-star.less';
 @import '../components/tag-selector.less';
 @import '../components/sorting-selector.less';
+@import '../components/news-tab.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
