EDU-428 Add favorites tab with mock data

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -77,6 +77,7 @@
 @import '../components/tag-selector.less';
 @import '../components/sorting-selector.less';
 @import '../components/news-tab.less';
+@import '../components/favorites-tab.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
