EDU-428 Display favorites on Dashboard

--- a/src/components/favorites-tab.less
+++ b/src/components/favorites-tab.less
@@ -1,30 +1,7 @@
 .FavoritesTab {}
 
-.FavoritesTab-section {
-  margin-bottom: 50px;
-
-  &:last-of-type {
-    margin-bottom: 0;
-  }
-}
-
-.FavoritesTab-sectionHeading {
-  color: @edu-text-color;
+.FavoritesTab-sortingSelector {
+  display: flex;
+  justify-content: flex-end;
   margin-bottom: 20px;
-}
-
-.FavoritesTab-emptySectionText {
-  font-style: italic;
-}
-
-.FavoritesTab-sectionContent {
-  display: grid;
-  grid-auto-flow: row;
-  grid-gap: 5px;
-  padding: 0 20px;
-
-  @media @edu-media-phone {
-    padding-left: 0;
-    padding-right: 0;
-  }
 }
