--- a/src/styles/antd-variable-overrides.less
+++ b/src/styles/antd-variable-overrides.less
@@ -188,7 +188,7 @@
 
 // @btn-disable-color: @disabled-color;
 // @btn-disable-bg: @disabled-bg;
-// @btn-disable-border: @border-color-base;
+@btn-disable-border: @edu-border-color-light;
 
 // @btn-default-ghost-color: @component-background;
 // @btn-default-ghost-bg: transparent;
