--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -40,6 +40,7 @@
 @edu-text-color: #626262;
 @edu-text-color-secondary: #9A9A9A;
 @edu-disabled-color: #E6E6E6;
+@edu-disabled-color-checked: #BCBCBC;
 @edu-background-color-base: #F0F0F0;
 @edu-background-color-light: #FAFAFA;
 @edu-content-title-color: #000000;
