NOTICKET: Use LESS variable for link text decoration

--- a/src/components/tag-selector.less
+++ b/src/components/tag-selector.less
@@ -12,7 +12,7 @@
   color: @edu-link-color;
   padding: @tag-padding;
   font-size: @tag-font-size;
-  text-decoration: underline;
+  text-decoration: @edu-link-decoration;
   user-select: none;
 
   &.is-active {
