EDU-416 Change user activities icons

--- a/src/components/news-tab.less
+++ b/src/components/news-tab.less
@@ -41,11 +41,7 @@
 }
 
 .NewsTab-activityMetadataIcon {
-  color: @edu-black;
-
-  & > .NewsTab-activityMetadataIcon--lighter {
-    color: @edu-text-color-secondary;
-  }
+  color: @edu-text-color;
 }
 
 .NewsTab-activityData {
