EDU-451 Show default sections' content semi-transparently

--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -123,11 +123,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: @edu-white;
+  background-color: @edu-selection-background-color;
   opacity: 70%;
 
   &.SectionDisplay-overlay--withButtons {
-    background-color: @edu-selection-background-color;
+    background-color: transparent;
     opacity: 100%;
   }
 }
