EDU-434 Use same document cell styling on documents table as on search table

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -78,6 +78,7 @@
 @import '../components/sorting-selector.less';
 @import '../components/news-tab.less';
 @import '../components/favorites-tab.less';
+@import '../components/document-info-cell.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
