EDU-449 Create PDF viewer plugin

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -99,3 +99,4 @@
 @import '../plugins/interval-trainer/interval-trainer.less';
 @import '../plugins/ear-training/ear-training.less';
 @import '../plugins/diagram-net/diagram-net.less';
+@import '../plugins/pdf-viewer/pdf-viewer.less';
