NOTICKET: Replicate OMA home page template in testApp

--- a/test-app/src/bundles/home-page-template.less
+++ b/test-app/src/bundles/home-page-template.less
@@ -37,8 +37,13 @@
   margin-bottom: 40px;
 }
 
-.HomePageTemplate-info {
+.HomePageTemplate-subtitle {
   font-size: 18px;
+  font-weight: 300;
+}
+
+.HomePageTemplate-info {
+  color: @edu-text-color;
   font-weight: 300;
 }
 
