EDU-455 Adjust educandu alert colors to reflect OMA overrides

--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -48,12 +48,12 @@
 @edu-border-color-light: #E8E8E8;
 
 @edu-apply-color: @green-4;
-@edu-success-color: @green-6;
+@edu-success-color: @green-7;
 @edu-discard-color: @red-4;
-@edu-error-color: @red-5;
+@edu-error-color: @red-7;
 @edu-danger-color: @red-8;
 @edu-highlight-color: @red-5;
-@edu-warning-color: @gold-6;
+@edu-warning-color: @orange-6;
 
 // Colors - antd mappings
 @edu-white: #FFFFFF;
