--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -29,7 +29,6 @@
 @import '../components/pages/docs.less';
 @import '../components/pages/login.less';
 @import '../components/pages/users.less';
-@import '../components/pages/settings.less';
 @import '../components/pages/dashboard.less';
 @import '../components/pages/register.less';
 @import '../components/pages/reset-password.less';
@@ -79,10 +78,14 @@
 @import '../components/news-tab.less';
 @import '../components/favorites-tab.less';
 @import '../components/document-info-cell.less';
+@import '../components/admin/settings-tab.less';
+@import '../components/admin/storage-plans-tab.less';
+@import '../components/byte-input.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
 @import '../styles/tabs.less';
+@import '../styles/card.less';
 @import '../styles/panel.less';
 @import '../styles/avatar.less';
 
