EDU-456 Render questions and answers in quick tester as Markdown with media

--- a/src/plugins/quick-tester/quick-tester.less
+++ b/src/plugins/quick-tester/quick-tester.less
@@ -88,3 +88,10 @@
   display: inline-block;
   margin: 0 6px;
 }
+
+.QuickTesterEditor {}
+
+.QuickTesterEditor-infoIcon {
+  color: @edu-secondary-color-dark;
+  margin-left: @edu-button-spacing;
+}
