EDU-458 Allow login with email address or username

--- a/src/components/pages/login.less
+++ b/src/components/pages/login.less
@@ -4,3 +4,18 @@
   text-align: center;
   margin-bottom: 32px;
 }
+
+.LoginPage-form {
+  margin: 0 auto;
+  max-width: 360px;
+  padding-bottom: 120px;
+}
+
+.LoginPage-forgotPasswordLink {
+  margin-top: 24px;
+  text-align: right;
+}
+
+.LoginPage-logonButton {
+  margin-top: 48px;
+}
