EDU-460 Add warning when saving to public storage from private rooms

--- a/src/components/storage-browser.less
+++ b/src/components/storage-browser.less
@@ -12,8 +12,10 @@
   }
 }
 
-.StorageBrowser-storageUsage {
+.StorageBrowser-storageDetails {
   min-height: 50px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   padding-left: 7px;
 }
 
