--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -40,6 +40,10 @@
 
 .Timeline-segment {
   text-align: center;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 0 5px;
   border-right: 1px dotted @timeline-segments-bar-color;
 
   &:last-of-type {
