EDU-462 Adjust register and reset-password forms to match login form

--- a/src/components/pages/register.less
+++ b/src/components/pages/register.less
@@ -6,7 +6,13 @@
 }
 
 .RegisterPage-form {
+  .m-login-form;
+
   .ant-checkbox-wrapper {
     line-height: initial;
   }
+}
+
+.RegisterPage-formButton {
+  margin-top: 48px;
 }
