--- a/src/components/pages/reset-password.less
+++ b/src/components/pages/reset-password.less
@@ -1,6 +1,16 @@
-.ResetPasswordPage {}
+.ResetPasswordPage {
+  padding-bottom: 150px;
+}
 
 .ResetPasswordPage-title {
   text-align: center;
   margin-bottom: 32px;
+}
+
+.ResetPasswordPage-form {
+  .m-login-form;
+}
+
+.ResetPasswordPage-formButton {
+  margin-top: 48px;
 }
