EDU-468 Add support for setting and rendering clip area

--- a/src/plugins/image/image.less
+++ b/src/plugins/image/image.less
@@ -3,14 +3,17 @@
     .Image-primary {
       display: block;
     }
+
     .Image-secondary {
       display: none;
     }
   }
+
   &--hoverable:hover {
     .Image-primary {
       display: none;
     }
+
     .Image-secondary {
       display: block;
     }
@@ -27,4 +30,8 @@
   padding-top: 20px;
   font-size: 12px;
   text-align: center;
+}
+
+.Image-clipEffectSettingImage {
+  width: 100%;
 }
