EDU-469 Extract generic UI to view batches

--- a/src/components/admin/settings-tab.less
+++ b/src/components/admin/settings-tab.less
@@ -1,5 +1,17 @@
 .SettingsTab {}
 
+.SettingsTab-card {
+  margin-top: 30px;
+
+  &:first-of-type {
+    margin-top: 0;
+  }
+
+  &.SettingsTab-card--danger {
+    border-color: @edu-danger-color;
+  }
+}
+
 .SettingsTab-saveButton {
   margin-top: 30px;
 }
