--- a/src/plugins/image/image.less
+++ b/src/plugins/image/image.less
@@ -32,6 +32,24 @@
   text-align: center;
 }
 
+.Image-maxWidthInput {
+  margin-top: 20px;
+}
+
 .Image-clipEffectSettingImage {
   width: 100%;
+}
+
+.Image-clipEffectRegion {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: @edu-content-padding;
+}
+
+.Image-clipEffectRegionValue {
+  display: flex;
+  gap: 10px;
+  align-items: baseline;
 }
