EDU-468 Show clipped area size in pixels instead of region data

--- a/src/plugins/image/image.less
+++ b/src/plugins/image/image.less
@@ -36,6 +36,12 @@
   margin-top: 20px;
 }
 
+.Image-clipEffect {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 .Image-clipEffectImage {
   display: none;
 }
@@ -48,7 +54,6 @@
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
-  justify-content: center;
   padding-top: @edu-content-padding;
 }
 
