EDU-468 Add hint above clip effect image

--- a/src/plugins/image/image.less
+++ b/src/plugins/image/image.less
@@ -46,6 +46,10 @@
   flex-direction: column;
 }
 
+.ImageEditor-clipEffectHint {
+  padding-bottom: @edu-content-padding;
+}
+
 .ImageEditor-clipEffectImage {
   width: 100%;
 }
