EDU-480 Reorganize data on rooms tab

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -77,7 +77,6 @@
 @import '../components/sorting-selector.less';
 @import '../components/news-tab.less';
 @import '../components/favorites-tab.less';
-@import '../components/document-info-cell.less';
 @import '../components/admin/settings-tab.less';
 @import '../components/admin/storage-plans-tab.less';
 @import '../components/byte-input.less';
@@ -88,6 +87,7 @@
 @import '../styles/tabs.less';
 @import '../styles/panel.less';
 @import '../styles/avatar.less';
+@import '../styles/info-cell.less';
 
 
 // Plugin styles
