--- a/src/components/rooms-tab.less
+++ b/src/components/rooms-tab.less
@@ -3,11 +3,17 @@
 .RoomsTab-card {
   margin-bottom: 60px;
 
-  &:last-of-type{
+  &:last-of-type {
     margin-bottom: 0;
   }
 }
 
 .RoomsTab-createRoomButton {
   margin-top: 10px;
+}
+
+.RoomsTab-accessCell {
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
