--- a/src/styles/info-cell.less
+++ b/src/styles/info-cell.less
@@ -1,20 +1,20 @@
-.DocumentInfoCell {
+.InfoCell {
   display: block;
   text-decoration: none;
 }
 
-.DocumentInfoCell-title {
+.InfoCell-mainText {
   color: @edu-content-title-color;
   font-size: 1.25em;
   font-weight: bold;
 }
 
-.DocumentInfoCell-description {
+.InfoCell-description {
   margin-top: 0.2em;
   color: fade(@edu-text-color, 80%);
 }
 
-.DocumentInfoCell-dates {
+.InfoCell-subtext {
   margin-top: 0.75em;
   font-size: 0.9em;
   color: @edu-text-color-secondary;
