--- a/src/components/rooms-tab.less
+++ b/src/components/rooms-tab.less
@@ -17,3 +17,9 @@
   gap: 10px;
   align-items: center;
 }
+
+.RoomsTab-sortingSelector {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 20px;
+}
