EDU-474 Fix PDF viewer pager disabled states

--- a/src/styles/antd-style-overrides.less
+++ b/src/styles/antd-style-overrides.less
@@ -22,6 +22,10 @@
   .disabled-input-style();
 }
 
+.ant-btn.ant-btn-link {
+  border: none;
+}
+
 .ant-radio-button-wrapper-disabled,
 .ant-radio-button-wrapper-disabled:hover,
 .ant-radio-button-wrapper-disabled:active,
