EDU-479 Streamline public/private icons

--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -4,12 +4,10 @@
 
 .Room-subtitle {
   display: flex;
+  gap: 8px;
   font-size: 12px;
+  align-items: center;
   color: @edu-text-color-secondary;
-}
-
-.Room-subtitleIcon {
-  padding-right: 8px;
 }
 
 .Room-description {
